Removing the CHANGELOG entry for unreleased changes (#5661)
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>